Add Priority Scheduling_basic
우선순위 쓰레드 스왑까지만 구현
donation, lock등은 아직 미구현

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "thread.h": "c",
         "timer.h": "c",
-        "random": "c"
+        "random": "c",
+        "synch.h": "c"
     }
 }
