--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,14 @@
         "timer.h": "c",
         "random": "c",
         "synch.h": "c",
-        "numbers": "c"
+        "numbers": "c",
+        "array": "c",
+        "chrono": "c",
+        "compare": "c",
+        "functional": "c",
+        "ratio": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c"
     }
 }
