--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,14 +4,6 @@
         "timer.h": "c",
         "random": "c",
         "synch.h": "c",
-        "numbers": "c",
-        "array": "c",
-        "chrono": "c",
-        "compare": "c",
-        "functional": "c",
-        "ratio": "c",
-        "tuple": "c",
-        "type_traits": "c",
-        "utility": "c"
+        "numbers": "c"
     }
 }
